# universal_webhook_adapter

./: .env.example  .flake8  .gitignore  .isort.cfg  Procfile  pyproject.toml
alembic/: env.py
alembic/versions/: 3a92984c5ed2_initial_tables.py  efa3813fc2fb_change_send_to_to_urltype.py
universal_webhooks/: crud.py  database.py  main.py  models.py  schemas.py  settings.py
