[tool.poetry]
name = "universal_webhooks"
version = "0.1.0"
description = ""
authors = ["Lucas Daniel <lucasdpr1@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pyjq = "^2.5.1"
requests = "^2.25.1"
fastapi = {extras = ["uvicorn"], version = "^0.63.0"}
SQLAlchemy = "^1.4.8"
alembic = "^1.5.8"
aiohttp = "^3.7.4"
python-dotenv = "^0.17.0"
asyncpg = "^0.22.0"
SQLAlchemy-Utils = "^0.37.0"
fastapi-utils = "^0.2.1"
gunicorn = "^20.1.0"
uvicorn = {extras = ["standard"], version = "^0.13.4"}

[tool.poetry.dev-dependencies]
aiosqlite = "^0.17.0"
debugpy = "^1.2.1"
psycopg2-binary = "^2.8.6"
black = "^20.8b1"
rope = "^0.18.0"
mypy = "^0.812"
celery-types = "^0.3.0"
isort = "^5.8.0"
flake8 = "^3.9.1"
flake8-bugbear = "^21.4.3"
flake8-isort = "^4.0.0"
pre-commit = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
